<resources>
    <string name="app_name">Muscle Fatigue</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new Account</string>
    <string name="select">Select Item</string>
    <string name="default_web_client_id" translatable="false">929129799158-at3fa91lhdvn3mqvvm1ddhiabrg7idvn.apps.googleusercontent.com</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="name_domain_com">example@gmail.com</string>
    <string name="email">Email</string>
    <string name="dont_have_an_account_sign_up"><![CDATA[Don\'t have an account? <b><font color=#FF5349>Sign Up</font></b>]]></string>
    <string name="already_have_an_account_sign_in"><![CDATA[Already have an account? <b><font color=#FF5349>Sign In</font></b>]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="or_connect_with_social">Or connect with social</string>
    <string name="login_with_google">Login With Google</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_sign_in"><![CDATA[Back to <b><font color=#FF5349>Sign In</font></b>]]></string>
    <string name="send_reset_link">Send reset password link</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="age">Age</string>
    <string name="height">height</string>
    <string name="save">Save</string>
    <string name="weight_in_kg">Weight In KG</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>

    <string name="select_workout">Select Workout</string>
    <string name="select_time">Select Time</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="get_notified">Get Notified</string>
    <string name="no_thanks">No thanks</string>
    <string name="height_in_feet">Height In Feet</string>
    <string name="height_ft">Height(in inches\")</string>
    <string name="calculate">Calculate</string>
    <string name="bmi">BMI</string>
    <string name="bluetooth_off"><![CDATA[<u>Bluetooth Off</u>]]></string>
    <string name="sensor_disconnected"><![CDATA[<u>Shimmer sensor disconnected</u>]]></string>
    <string name="sensor_connected"><![CDATA[<u>Shimmer sensor connected</u>]]></string>
    <string name="fatigue_analysis_result">Fatigue Analysis Result</string>

</resources>