<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/screens_side_spacing"
    android:paddingVertical="@dimen/screens_upper_spacing"
    tools:context=".screen.EditProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/space_5"
                android:layout_margin="@dimen/space_2"
                android:elevation="3dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_back_rounded_button" />

            <TextView
                style="@style/textHeading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_30"
                android:text="@string/edit_profile" />


            <TextView
                style="@style/textInputLabelGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_50"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameEt"
                style="@style/editTextStyle"
                android:layout_marginTop="@dimen/space_5"
                android:paddingHorizontal="@dimen/space_15"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_60"
                android:digits="0123456789@._- ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
                android:gravity="center_vertical|start"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:singleLine="true" />

            <TextView
                style="@style/textInputLabelGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_15"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailEt"
                style="@style/editTextStyle"
                android:layout_marginTop="@dimen/space_5"
                android:paddingHorizontal="@dimen/space_15"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_60"
                android:digits="0123456789@._-ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
                android:gravity="center_vertical|start"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:singleLine="true"
                android:editable="false"
                android:clickable="false"/>

            <TextView
                style="@style/textInputLabelGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_15"
                android:text="@string/age" />

            <EditText
                android:id="@+id/ageEt"
                style="@style/editTextStyle"
                android:layout_marginTop="@dimen/space_5"
                android:paddingHorizontal="@dimen/space_15"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_60"
                android:digits="0123456789"
                android:gravity="center_vertical|start"
                android:hint="@string/age"
                android:inputType="number"
                android:maxLength="3"
                android:singleLine="true" />

            <TextView
                style="@style/textInputLabelGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_15"
                android:text="@string/height_ft" />

            <EditText
                android:id="@+id/heightEt"
                style="@style/editTextStyle"
                android:layout_marginTop="@dimen/space_5"
                android:paddingHorizontal="@dimen/space_15"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_60"
                android:digits="0123456789."
                android:gravity="center_vertical|start"
                android:hint="@string/height"
                android:inputType="number"
                android:maxLength="5"
                android:singleLine="true" />

            <TextView
                style="@style/textInputLabelGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_15"
                android:text="@string/weight_kg" />

            <EditText
                android:id="@+id/weightEt"
                style="@style/editTextStyle"
                android:layout_marginTop="@dimen/space_5"
                android:paddingHorizontal="@dimen/space_15"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_60"
                android:digits="0123456789."
                android:gravity="center_vertical|start"
                android:hint="@string/weight_in_kg"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true" />


            <Button
                android:id="@+id/btnContinue"
                android:layout_width="@dimen/space_200"
                android:layout_height="@dimen/space_50"
                android:layout_marginTop="@dimen/space_30"
                android:background="@drawable/rounded_corner_app_button"
                android:elevation="3dp"
                android:singleLine="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/save"
                android:textAlignment="center"
                android:textAppearance="@style/MyButtonTextAppearance" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
